[package]
name = "rustrdp"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI
eframe = "0.35"
egui = "0.35"

# RDP
ironrdp = { version = "0.16", features = ["connector", "session", "graphics", "input", "pdu"] }
ironrdp-blocking = "0.9"
ironrdp-connector = "0.9"
ironrdp-session = "0.10"
ironrdp-graphics = "0.8"
ironrdp-input = "0.6"
ironrdp-pdu = "0.8"
ironrdp-core = "0.2"
ironrdp-dvc = "0.7"
ironrdp-displaycontrol = "0.7"

# TLS + CredSSP network client
sspi = { version = "0.21", features = ["network_client"] }
tokio-rustls = "0.26"
x509-cert = { version = "0.2", default-features = false, features = ["std"] }

# Config
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
anyhow = "1"
